<resources>
    <string name="app_name">Strikepro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Главная</string>
    <string name="nav_catalog">Каталог</string>
    <string name="nav_blog">Блог</string>
    <string name="nav_buy">Где купить</string>
    <string name="nav_contact">Контакты</string>
    <string name="nav_about">О компании</string>

    <string name="about_longdesc"><![CDATA[
        <h1>О компании</h1>
        <p>
            История торговой марки STRIKE PRO® скромно началась в 1973 году на острове Тайвань.
            В то время компания была производителем блесен под патронажем известных американских и шведских фирм.
            Менялись технологии, накапливался опыт, увеличивались объемы,
            и к концу 80-х годов компания уже являлась поставщиком рыболовных приманок для многих торговых домов Европы.
        </p>
        <p>
            Находясь в постоянном поиске лучшей идеи, потихоньку развиваясь и отслеживая основные мировые тенденции,
            к 1990 году члены компании во главе с президентом - Майклом Цаем (Michael Tsai), освоили производство воблеров.
            И уже в 2000 году, после удачной экспозиции на мировой арене EFFTEX,
            компания Strike Pro начала выпускать продукцию под своим именем,
            с этого момента выступив на рынке рыболовных товаров как самостоятельный быстро развивающийся бренд.
        </p>
        <p>
            По словам М.Цая к стремительному успеху Strike Pro привело - «Внимание к деталям, Правильный баланс и Нужное качество.
            Приманка должна правильно выглядеть. Правильно работать. Работать, начиная с упаковки».
        </p>
        <p>
            Все прототипы Strike Pro сначала моделируются из дерева.
            Это – самый лучший материал для того, чтобы прочувствовать дизайн, форму и баланс воблера,
            независимо от окончательного материала. Он тщательно проверяется на предел прочности и тестируется на разрушение,
            прежде чем запускается в производство.
        </p>
        <p>
            Воблеры STRIKE PRO® изготавливаются из ударопрочного пластика. Сам корпус и лопасть отливаются одновременно,
            что является несомненным плюсом, подобные воблеры не страдают проблемами расшатывания и тем более потери лопасти.
        </p>
        <p>
            Все воблеры покрывается особым отражающим лаком, рисунок наносится вручную.
            Затем наносится защитное покрытие. Петли каждого воблера изготовлены из нержавеющей проволоки,
            которая допускает многократные перегибы. В зависимости от модели,
            воблеры оснащены высококачественными тройниками VMC/OWNER и надежными заводными кольцами.
            То, что производство происходит в одном месте и под постоянным контролем позволяет выпускать продукцию высочайшего качества.
            На сегодняшний день, благодаря эффективной системе сбыта, продукцию под брендом Strike Pro можно приобрести в 56 странах мира.
        </p>
        <p>
            На российском рынке официальным представителем этой торговой марки с 1998 года является компания Страйк Про.
        </p>
        <p>
            Российское представительство очень ответственно подходит к выбору ассортимента представленного на нашем рынке.
            Прежде чем новая модель появляется на прилавках магазинов она проходит тестирование на различных водоёмах
            от Астрахани до Архангельска, от Калининграда до Сахалина.
            Для российских рыболовов выбираются самые результативные модели и уловистые расцветки.
            Компания предлагает полный эксклюзивный ассортимент приманок «STRIKE PRO», в котором более 250 моделей,
            в 12-15 вариантах цветового исполнения. Такой ассортимент поддерживается на протяжении всего года,
            всегда имея нужную комбинацию для каждого искушенного рыболова.
        </p>
     ]]></string>
    <string name="open_vkontakte">Vkontakte</string>
    <string name="open_facebook">Facebook</string>
    <string name="open_instagram">Instagram</string>
    <string name="open_youtube">Youtube</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="developers">Разработчик: arthur.ragimov@gmail.com</string>
</resources>
