<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/mm_common_group" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/ic_catalog"
            android:title="@string/nav_catalog" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_blog"
            android:title="@string/nav_blog" />
    </group>

    <group android:id="@+id/mm_second_group" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wherebuy"
            android:icon="@drawable/ic_wherebuy"
            android:title="@string/nav_buy" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contacts"
            android:title="@string/nav_contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about" />
    </group>

</menu>
